Trying to fix overlay on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -254,7 +254,6 @@ a:hover, a:focus, a:active {
 
 /* The Overlay */
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
     height: 0;
     width: 100%;
     position: fixed; /* Stay in place */
@@ -264,21 +263,19 @@ a:hover, a:focus, a:active {
     background-color: rgb(255,255,255); /* White fallback color */
     background-color: rgba(255,255,255, 0.95); /* White w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    transition: 0.5s; 
 }
 
-/* Position the content inside the overlay */
 .overlay-content {
     position: relative;
-    top: 10%; /* 10% from the top */
-    width: 100%; /* 100% width */
+    top: 10%; 
+    width: 100%; 
 	padding-right: 10%;
 	padding-left:  10%;
 	padding-bottom: 5%;
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    margin-top: 40px; /* to avoid conflict with the close button on smaller screens */
 }
 
-/* Position the close button (top right corner) */
 .overlay .closebtn {
     position: absolute;
     top: 60px;
